# gdt-core

./: .gitignore  .readthedocs.yaml  Manifest.in  NOTICE  PIPY-README.rst  PYPI-README.rst  README.rst  pyproject.toml  release-notes.md  requirements.txt  setup.py
docs/: conf.py  contributing.rst  index.rst  install.rst  license.rst  requirements.txt
docs/_static/: bootstrap-astropy.css
docs/_templates/: layout.html
docs/core/: collection.rst  coords.rst  detectors.rst  file.rst  geomagnetic.rst  headers.rst  healpix.rst  heasarc.rst  pha.rst  phaii.rst  primitives.rst  response.rst  time.rst  tte.rst
docs/core/background/: background.rst  binned.rst  fitter.rst  primitives.rst  unbinned.rst
docs/core/binning/: binned.rst  binning.rst  unbinned.rst
docs/core/plot/: drm.rst  earthplot.rst  lib.rst  lightcurve.rst  model.rst  plot.rst  plot_plot.rst  sky.rst  spectrum.rst
docs/core/simulate/: generators.rst  pha.rst  profiles.rst  simulate.rst  tte.rst
docs/core/spectra/: fitting.rst  functions.rst  parameters.rst  spectra.rst
docs/core/temporal/: duration.rst  temporal.rst
docs/examples/: BayesianBlocksLightcurve_example.ipynb
scripts/: gdt-data
src/gdt/core/: __init__.py  collection.py  data_primitives.py  detector.py  file.py  fits.py  geomagnetic.py  headers.py  healpix.py  heasarc.py  pha.py  phaii.py  response.py  time.py  trigger.py  tte.py  types.py
src/gdt/core/background/: binned.py  fitter.py  primitives.py  unbinned.py
src/gdt/core/binning/: binned.py  unbinned.py
src/gdt/core/coords/: __init__.py  quaternion.py
src/gdt/core/coords/spacecraft/: __init__.py  axes.py  (+2 more)
src/gdt/core/plot/: defaults.py  drm.py  earthplot.py  lib.py  lightcurve.py  model.py  plot.py  sky.py  spectrum.py
src/gdt/core/simulate/: __init__.py  generators.py  pha.py  profiles.py  tte.py
src/gdt/core/spectra/: fitting.py  functions.py  parameters.py
src/gdt/core/temporal/: __init__.py  bayesian_blocks.py  bayesian_lc.py  duration.py
src/gdt/data/: specfit.npz
src/gdt/misc/: __init__.py  bayesian_blocks.py  scipy_derivative.py
tests/: __init__.py
tests/core/: test_data_collection.py  test_detector.py  test_file.py  test_fits.py  test_geomagnetic.py  test_headers.py  test_healpix.py  test_heasarc.py  test_pha.py  test_phaii.py  test_primitives.py  test_response.py  test_time.py  test_trigger.py  test_tte.py  test_types.py
tests/core/background/: __init__.py  test_background.py  test_fitter.py  test_primitives.py
tests/core/binning/: test_binned.py  test_unbinned.py
tests/core/coords/: __init__.py  test_quaternion.py  test_spacecraft.py
tests/core/plot/: __init__.py  test_drm.py  test_earthplot.py  test_lightcurves.py  test_model.py  test_plot.py  test_sky.py  test_spectrum.py
tests/core/simulate/: test_generators.py  test_pha.py  test_profiles.py  test_tte.py
tests/core/spectra/: test_fitting.py  test_functions.py  test_parameters.py
tests/core/temporal/: test_bayesian_blocks_lc.py  test_duration.py
tests/misc/: test_derivative.py
