[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gdt-core"
authors = [
    { name = "William (Bill) Cleveland Jr." },
    { name = "Adam Goldstein" },
    { name = "Daniel Kocevski" },
]
description = "Gamma-ray Data Tools: Core components"
requires-python = ">=3.8"
license = { file = "license.txt" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    'pyproj>=1.9.6',
    'numpy>=1.17.3',
    'scipy>=1.1.0',
    'matplotlib>=3.7.1',
    'astropy>=3.1',
    'healpy>=1.12.4',
    'cartopy>=0.21.1',
    'rich>=13.3.3'
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    'Sphinx',
    'astropy-sphinx-theme',
    'nbsphinx',
    'ipython',
    'sphinx-automodapi',
    'notebook',
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.dynamic]
version = { attr = "gdt.core.__version__" }
